// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test event match snapshot 1`] = `
Array [
  Object {
    "desc": "it is a mock api",
    "name": "login api",
    "scenes": Array [
      Object {
        "desc": "login success",
        "name": "scene 1",
        "return": Object {
          "code": 0,
          "data": Object {
            "username": "admin",
          },
        },
      },
      Object {
        "desc": "login failure",
        "error": Object {
          "code": 1,
          "message": "password incorrect",
        },
        "name": "scene 2",
      },
    ],
    "target": [Function],
    "timeStamp": 0,
    "type": "Register/asyncFn",
  },
]
`;

exports[`snapshot test event match snapshot 2`] = `
Array [
  Object {
    "pass": [Function],
    "reject": [Function],
    "resolve": [Function],
    "rule": Object {
      "desc": "it is a mock api",
      "name": "login api",
      "scenes": Array [
        Object {
          "desc": "login success",
          "name": "scene 1",
          "return": Object {
            "code": 0,
            "data": Object {
              "username": "admin",
            },
          },
        },
        Object {
          "desc": "login failure",
          "error": Object {
            "code": 1,
            "message": "password incorrect",
          },
          "name": "scene 2",
        },
      ],
      "target": [Function],
      "timeStamp": 0,
      "type": "Register/asyncFn",
    },
    "target": [Function],
    "timeStamp": 0,
    "type": "Run/asyncFn/before",
  },
]
`;
